Modified the Paper class

--- a/src/dev/docling_playground.ipynb
+++ b/src/dev/docling_playground.ipynb
@@ -4,19 +4,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Niko\\Desktop\\MSc Data Science ETH Code\\Data Science Lab\\dsl-research-assistant\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from docling.document_converter import DocumentConverter\n",
-    "from docling.utils."
+    "from docling.document_converter import DocumentConverter"
    ]
   },
   {
@@ -419,65 +409,6 @@
     "result = converter.convert(source)\n",
     "print(result.document.export_to_markdown())\n",
     "# output: ## Docling Technical Report [...]\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'self_ref': '#/texts/1', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 1, 'bbox': {'l': 212.59, 't': 566.64, 'r': 399.412, 'b': 551.163, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 24)}], 'orig': 'Docling Technical Report', 'text': 'Docling Technical Report', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/5', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 1, 'bbox': {'l': 283.758, 't': 393.159, 'r': 328.243, 'b': 382.411, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 8)}], 'orig': 'Abstract', 'text': 'Abstract', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/7', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 1, 'bbox': {'l': 108.0, 't': 267.802, 'r': 190.814, 'b': 257.054, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 14)}], 'orig': '1 Introduction', 'text': '1 Introduction', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/19', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 2, 'bbox': {'l': 108.0, 't': 572.49, 'r': 205.291, 'b': 561.742, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 17)}], 'orig': '2 Getting Started', 'text': '2 Getting Started', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/25', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 2, 'bbox': {'l': 108.0, 't': 297.598, 'r': 223.69, 'b': 286.85, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 21)}], 'orig': '3 Processing pipeline', 'text': '3 Processing pipeline', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/27', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 2, 'bbox': {'l': 108.0, 't': 161.43399999999997, 'r': 192.035, 'b': 152.47800000000007, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 16)}], 'orig': '3.1 PDF backends', 'text': '3.1 PDF backends', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/49', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 3, 'bbox': {'l': 108.0, 't': 426.426, 'r': 173.863, 'b': 417.47, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 13)}], 'orig': '3.2 AI models', 'text': '3.2 AI models', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/51', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 3, 'bbox': {'l': 108.0, 't': 313.718, 'r': 206.281, 'b': 304.762, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 21)}], 'orig': 'Layout Analysis Model', 'text': 'Layout Analysis Model', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/54', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 3, 'bbox': {'l': 108.0, 't': 175.058, 'r': 228.109, 'b': 166.10199999999998, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 27)}], 'orig': 'Table Structure Recognition', 'text': 'Table Structure Recognition', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/58', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 4, 'bbox': {'l': 108.0, 't': 650.634, 'r': 130.137, 'b': 641.678, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 3)}], 'orig': 'OCR', 'text': 'OCR', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/61', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 4, 'bbox': {'l': 108.0, 't': 526.175, 'r': 171.372, 'b': 517.219, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 12)}], 'orig': '3.3 Assembly', 'text': '3.3 Assembly', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/63', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 4, 'bbox': {'l': 108.0, 't': 416.759, 'r': 184.114, 'b': 407.803, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 17)}], 'orig': '3.4 Extensibility', 'text': '3.4 Extensibility', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/66', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 4, 'bbox': {'l': 108.0, 't': 244.75800000000004, 'r': 191.782, 'b': 234.01, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 13)}], 'orig': '4 Performance', 'text': '4 Performance', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/73', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 5, 'bbox': {'l': 108.0, 't': 528.628, 'r': 190.072, 'b': 517.88, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 14)}], 'orig': '5 Applications', 'text': '5 Applications', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/75', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 5, 'bbox': {'l': 108.0, 't': 346.788, 'r': 283.777, 'b': 336.04, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 31)}], 'orig': '6 Future work and contributions', 'text': '6 Future work and contributions', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/78', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 5, 'bbox': {'l': 108.0, 't': 181.288, 'r': 163.544, 'b': 170.53999999999996, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 10)}], 'orig': 'References', 'text': 'References', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/99', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 7, 'bbox': {'l': 108.0, 't': 718.286, 'r': 157.53, 'b': 707.538, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 8)}], 'orig': 'Appendix', 'text': 'Appendix', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/101', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 7, 'bbox': {'l': 144.399, 't': 669.683, 'r': 291.944, 'b': 654.054, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 71)}], 'orig': 'DocLayNet: A Large Human-Annotated Dataset for Document-Layout Analysis', 'text': 'DocLayNet: A Large Human-Annotated Dataset for Document-Layout Analysis', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/102', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 7, 'bbox': {'l': 329.602, 't': 667.291, 'r': 520.785, 'b': 662.718, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 71)}], 'orig': 'DocLayNet: A Large Human-Annotated Dataset for Document-Layout Analysis', 'text': 'DocLayNet: A Large Human-Annotated Dataset for Document-Layout Analysis', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/108', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 7, 'bbox': {'l': 124.553, 't': 607.952, 'r': 146.121, 'b': 602.522, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 8)}], 'orig': 'ABSTRACT', 'text': 'ABSTRACT', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/110', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 7, 'bbox': {'l': 124.553, 't': 495.448, 'r': 154.607, 'b': 490.018, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 12)}], 'orig': 'CCS CONCEPTS', 'text': 'CCS CONCEPTS', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/118', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 7, 'bbox': {'l': 329.602, 't': 614.949, 'r': 357.916, 'b': 610.376, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 8)}], 'orig': 'ABSTRACT', 'text': 'ABSTRACT', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/120', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 7, 'bbox': {'l': 329.602, 't': 542.444, 'r': 370.507, 'b': 537.87, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 12)}], 'orig': 'CCS CONCEPTS', 'text': 'CCS CONCEPTS', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/125', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 7, 'bbox': {'l': 329.602, 't': 479.162, 'r': 359.921, 'b': 474.589, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 8)}], 'orig': 'KEYWORDS', 'text': 'KEYWORDS', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/127', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 7, 'bbox': {'l': 329.602, 't': 458.569, 'r': 388.248, 'b': 453.995, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 21)}], 'orig': 'ACM Reference Format:', 'text': 'ACM Reference Format:', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/505', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 7, 'bbox': {'l': 222.539, 't': 480.066, 'r': 245.487, 'b': 474.635, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 8)}], 'orig': 'KEYWORDS', 'text': 'KEYWORDS', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/507', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 7, 'bbox': {'l': 222.43, 't': 462.086, 'r': 254.699, 'b': 458.119, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 20)}], 'orig': 'ACMReference Format:', 'text': 'ACMReference Format:', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/515', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 8, 'bbox': {'l': 122.999, 't': 338.093, 'r': 163.045, 'b': 331.836, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 13)}], 'orig': '5 EXPERIMENTS', 'text': '5 EXPERIMENTS', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/518', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 8, 'bbox': {'l': 370.3333333333333, 't': 400.33333333333337, 'r': 404.3333333333333, 'b': 395.0, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 11)}], 'orig': 'EXPERIMENTS', 'text': 'EXPERIMENTS', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/523', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 8, 'bbox': {'l': 235.911, 't': 377.122, 'r': 299.556, 'b': 370.865, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 30)}], 'orig': 'Baselines for Object Detection', 'text': 'Baselines for Object Detection', 'formatting': None, 'hyperlink': None, 'level': 1}\n",
-      "{'self_ref': '#/texts/525', 'parent': {'cref': '#/body'}, 'children': [], 'content_layer': <ContentLayer.BODY: 'body'>, 'label': <DocItemLabel.SECTION_HEADER: 'section_header'>, 'prov': [{'page_no': 8, 'bbox': {'l': 367.0, 't': 328.0, 'r': 434.3333333333333, 'b': 321.33333333333337, 'coord_origin': <CoordOrigin.BOTTOMLEFT: 'BOTTOMLEFT'>}, 'charspan': (0, 30)}], 'orig': 'Baselines for Object Detection', 'text': 'Baselines for Object Detection', 'formatting': None, 'hyperlink': None, 'level': 1}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Niko\\AppData\\Local\\Temp\\ipykernel_22344\\837931600.py:2: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/\n",
-      "  if item[0].dict()['label'] == 'section_header':\n",
-      "C:\\Users\\Niko\\AppData\\Local\\Temp\\ipykernel_22344\\837931600.py:3: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/\n",
-      "  print(item[0].dict())\n"
-     ]
-    }
-   ],
-   "source": [
-    "for item in result.document.iterate_items():\n",
-    "    if item[0].dict()['label'] == 'section_header':\n",
-    "        print(item[0].dict())"
    ]
   }
  ],
